--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/PortfolioGamifier.loader.js";
       var config = {
-        dataUrl: buildUrl + "/PortfolioGamifier.data.gz",
-        frameworkUrl: buildUrl + "/PortfolioGamifier.framework.js.gz",
-        codeUrl: buildUrl + "/PortfolioGamifier.wasm.gz",
+        dataUrl: buildUrl + "/PortfolioGamifier.data.unityweb",
+        frameworkUrl: buildUrl + "/PortfolioGamifier.framework.js.unityweb",
+        codeUrl: buildUrl + "/PortfolioGamifier.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Portfolio",
